WIP PoC of policy imports
Signed-off-by: Thomas Jaeckle <thomas.jaeckle@bosch.io>